--- a/style.css
+++ b/style.css
@@ -234,7 +234,8 @@ section {
 
 .hero-line:nth-child(3) {
     animation: fadeInUp 0.8s ease 0.6s forwards;
-    margin-left: 8rem;
+    margin-left: 4rem;
+    font-style: italic;
 }
 
 @keyframes fadeInUp {
