--- a/style.css
+++ b/style.css
@@ -527,6 +527,14 @@ footer {
     margin-top: 2rem;
 }
 
+footer a {
+    color: gray;
+}
+
+footer a:hover {
+    color: white;
+}
+
 /* Responsive Design */
 @media (max-width: 1200px) {
     .menu-button {
